stellar-core/src/syntax/snapshots/stellar_core__syntax__scan__tests__eof.snap
---
source: stellar-core/src/syntax/scan.rs
expression: "scan(\"\")"
snapshot_kind: text
---
Ok(
    TokenStream(
        [
            EndOfFile {
                location: Location {
                    line: 1,
                    column: 0,
                    index: 0,
                },
            },
        ],
    ),
)
