stellar-core/src/syntax/snapshots/stellar_core__syntax__scan__tests__unexpected_char.snap
---
source: stellar-core/src/syntax/scan.rs
expression: "scan(\"!\")"
snapshot_kind: text
---
Err(
    UnexpectedCharacter {
        character: '!',
        span: Span {
            start: Location {
                line: 1,
                column: 0,
                index: 0,
            },
            end: Location {
                line: 1,
                column: 1,
                index: 1,
            },
        },
    },
)
